fix: word wrap long page or post titles

--- a/style.css
+++ b/style.css
@@ -476,6 +476,14 @@ big {
 	font-size: 125%;
 }
 
+.entry-title,
+.page-title {
+	min-width: 0;
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	word-break: break-word;
+}
+
 /* Elements
 --------------------------------------------- */
 :root {
